--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.7.1",
     "@emotion/react": "11.8.2",
+    "@emotion/server": "^11.4.0",
     "@emotion/styled": "11.8.1",
     "@mui/icons-material": "5.5.1",
     "@mui/material": "5.5.2",
@@ -17,6 +19,7 @@
     "axios": "0.26.1",
     "clsx": "1.1.1",
     "next": "12.1.1",
+    "next-themes": "^0.1.1",
     "prism-react-renderer": "1.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
