--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
     "@table-library/react-table-library": "2.0.19",
     "axios": "0.26.1",
     "clsx": "1.1.1",
+    "copy-to-clipboard": "^3.3.1",
     "next": "12.1.1",
     "next-themes": "^0.1.1",
+    "prettier": "^2.6.1",
     "prism-react-renderer": "1.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-live": "2.2.3",
     "react-query": "3.34.19",
     "react-sparklines": "1.7.0",
+    "react-split-pane": "^0.1.92",
     "use-local-storage-state": "17.0.0"
   },
   "devDependencies": {
